Minor fix on button list scrollbar UI

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -1,5 +1,6 @@
 .buttonRow {
   white-space: nowrap;
   overflow: auto;
-  padding: 16px 0;
+  padding: 24px;
+  margin: 0 -24px -24px -24px;
 }
